# interview-scheduling

./: .safety-policy.yml  README.md  bcorps_matching.ipynb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: code-quality.yaml
docs/adr/: 0001-record-architecture-decisions.md  README.md
src/cohortify/: candidate.py  logger.py  matcher.py  scheduler.py
tests/: conftest.py
tests/candidate/: test_candidate.py
tests/logger/: test_logger.py
tests/matcher/: matcher_data.py  test_matcher.py
tests/scheduler/: scheduler_data.py  test_scheduler.py
utils/: matcher.py  scheduler.py
