[tool.poetry]
name = "cohortify"
version = "0.1.0"
description = "Provides sample interview matching and scheduling algorithms for cohort-based placement programs"
authors = ["widal001 <williamdaly422@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
networkx = "^2.6.3"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
tox = "^3.24.3"
pytest = "^6.2.5"
pylint = "^2.10.2"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"
safety = "^1.10.3"
liccheck = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.liccheck]
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
        "bsd",
        "new bsd",
        "bsd license",
        "new bsd license",
        "simplified bsd",
        "apache",
        "apache 2.0",
        "apache license 2.0",
        "apache software license",
        "apache software",
        "gnu lgpl",
        "gnu lesser general public license v2 (lgplv2)",
        "gnu general public license v2 (gplv2)",
        "gnu library or lesser general public license (lgpl)",
        "lgpl with exceptions or zpl",
        "isc license",
        "isc license (iscl)",
        "mit",
        "mit license",
        "mozilla public license 2.0 (mpl 2.0)",
        "public domain",
        "python software foundation license",
        "python software foundation",
        "zpl 2.1",
        "gpl v3"
]

# list any specifically unauthorized licenses here
unauthorized_licenses = []

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114",  # Disables module docstrings
  "R0201",  # Disables method could have been a function
  "R0903",  # Disables too few public methods
  "C0103",  # Disables invalid name
  "W0511",  # Disables fixme warning
  # TODO: Fix the errors below
  "R0914",  # Disables too many local variables
  "R0902",  # Disables too many instance attributes
]
