[tool.poetry]
authors = ["widal001 <williamdaly422@gmail.com>"]
description = "Provides sample interview matching and scheduling algorithms for cohort-based placement programs"
license = "MIT License"
name = "cohortify"
version = "0.1.0"

[tool.poetry.dependencies]
loguru = "^0.7.0"
networkx = "^2.8.6"
pandas = "^2.0.1"
python = "^3.8"
notebook = "^7.0.7"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
liccheck = "^0.6.2"
pre-commit = "^2.15.0"
pylint = "^2.10.2"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
safety = "^2.3.5"
tox = "^3.24.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 79

[tool.liccheck]
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "new bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache license 2.0",
  "apache software license",
  "apache software",
  "gnu lgpl",
  "gnu lesser general public license v2 (lgplv2)",
  "gnu general public license v2 (gplv2)",
  "gnu library or lesser general public license (lgpl)",
  "lgpl with exceptions or zpl",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "mozilla public license 2.0 (mpl 2.0)",
  "public domain",
  "python software foundation license",
  "python software foundation",
  "zpl 2.1",
  "gpl v3",
  "The Unlicense (Unlicense)",
]

# list any specifically unauthorized licenses here
unauthorized_licenses = []

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114", # Disables module docstrings
  "R0903", # Disables too few public methods
  "C0103", # Disables invalid name
  "W0511", # Disables fixme warning  # TODO: Fix the errors below
  "R0914", # Disables too many local variables
  "R0902", # Disables too many instance attributes
  "R0913", # Disables too many arguments
]
